compiler/weave_syntax/tests/data/syntax/IncompleteNamespace1.error
error: expected '[token:identifier]'
        --> <source>:2:1
         |
       2 | 
         | ^
error: expected '{'
        --> <source>:2:1
         |
       2 | 
         | ^
error: expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
